# flux

./: .env.example  .envrc  .gitignore  CHANGELOG.md  CLA.md  Cargo.toml  Cargo.workspace.toml  LICENSE  LICENSE-COMMERCIAL.md  README.md  ROADMAP.md  docker-compose.yml  flake.nix  justfile  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  safety-validation.yml  security.yml
apps/operator-tui/: Cargo.toml
apps/operator-tui/src/: app.rs  main.rs
apps/operator-tui/src/data/: clickhouse.rs  kafka.rs  mod.rs  questdb.rs
apps/operator-tui/src/ui/: mod.rs  ui.rs  views.rs  widgets.rs
config/: production.yaml
config/control/: pid_tuning.yaml
config/ml/: model_registry.yaml
config/plant/: defaults.json  financials.json  materials.json  ops_limits.json  plant.json  plant_layout.json
config/questdb/: questdb.conf  tables.sql
config/safety/: interlocks.yaml
config/schemas/pulsar/: audit-schema.json
config/schemas/questdb/: init.sql
config/security/: keys.yaml
core/: .envrc
docs/: requirements.md
docs/development/: structure.md
gui/: Cargo.toml
gui/src/: app.rs  calculations.rs  config.rs  lib.rs  main.rs  ui.rs
gui/src/bridge/: kafka.rs
infra/: docker-compose.yml.bkp
infra/ansible/inventory/: production.ini
infra/ansible/playbooks/: deploy.yml
infra/docker/: compose.override.yml  compose.yml  docker-compose.clickhouse.yml  docker-compose.data-pipeline.yml  docker-compose.glassflow.yml  docker-compose.kafka.yml
infra/docker/bkp/: docker-compose.base.yml  docker-compose.nats.yml  docker-compose.questdb.yml  docker-compose.zookeeper.yml
lib/flux-common/: Cargo.toml
lib/flux-common/src/: lib.rs
lib/flux-control/: Cargo.toml
lib/flux-control/src/: lib.rs  pid.rs
lib/flux-protocol/src/: lib.rs
lib/flux-py-common/: Cargo.toml
lib/flux-safety/: Cargo.toml
lib/flux-safety/src/: lib.rs
lib/flux-state/: Cargo.toml
lib/flux-state/src/: consensus.rs  lib.rs
nix/: default.nix  shell-app-tui.nix  shell-core.nix  shell-default.nix  shell-poc.nix  shell-srv-data-pipeline.nix  shell-srv-sim.nix
poc/: .envrc  README.md  docker-compose.yml  flux.py  pyproject.toml  verify_kafka.py
poc/config/clickhouse/: 001_init.sql
poc/config/development/: glassflow.yaml
poc/flux/config/: simulations.py
poc/flux/pipeline/: kafka_consumer.py  kafka_producer.py
poc/flux/simulation/: cell.py  plant.py  sensors.py
poc/scripts/: create_topics.sh  delete_glassflow_pipeline.py  init_clickhouse.sh  setup_glassflow.py
scripts/deployment/: start_questdb.sh
scripts/monitoring/: questdb_monitor.sh
services/data-pipeline/: Dockerfile  pyproject.toml
services/data-pipeline/data_pipeline/: main.py  questdb_writer.py
services/data-pipeline/src/: main.py  questdb_writer.py
services/kpi-engine/: pyproject.toml
services/kpi-engine/src/: __main__.py
services/simulator/: pyproject.toml
services/simulator/flux/: flux.py
services/simulator/flux/config/: simulations.py
services/simulator/flux/simulation/: plant.py
services/simulator/flux/utils/: log.py
services/simulator/scripts/: init_clickhouse.sh  run_simulation.py
tests/integration/: test_questdb_pipeline.py
