[package]
name = "flux"
version = "0.1.0"
edition = "2021"
authors = ["Pablo Aguirre <pabloaguirrenck@protonmail.ch>"]
description = "High-performance chemical process simulator and digital twin engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pabloagn/flux"
keywords = [
  "simulation",
  "chemical-engineering",
  "process-control",
  "digital-twin",
]
categories = ["science", "simulation"]

[dependencies]
# Core numerics
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ndarray = { version = "0.16", features = ["blas", "rayon"] }
num-traits = "0.2"
num-derive = "0.4"

# Parallelization
rayon = "1.10"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive"] }

# Scientific computing
argmin = { version = "0.10", features = ["nalgebra"] }
roots = "0.0.8"
statrs = "0.17"

# Time handling for dynamic simulation
chrono = { version = "0.4", features = ["serde"] }

# Optional async runtime for future IoT integration
tokio = { version = "1.40", features = ["full"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
approx = "0.5"
pretty_assertions = "1.4"

[features]
default = []
async = ["tokio"]
f32 = []          # Use f32 instead of f64 for embedded systems

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

[[bench]]
name = "thermodynamics"
harness = false

[[bench]]
name = "solver"
harness = false
