[workspace]
members = [
  # --- Apps ---
  "apps/operator-tui",

  # --- Lib ---
  "lib/flux-common",
  "lib/flux-control",
  "lib/flux-protocol",
  "lib/flux-safety",
  "lib/flux-state",

  # --- Services ---
  # "services/control-system",
  # "services/safety-interlock",
  # "services/audit-logger",
  # "services/state-manager",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FLUX Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
