[tool.poetry]
name = "flux-platform"
version = "0.1.0"
description = "Industrial-grade chlor-alkali digital twin platform"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24"
pandas = "^2.0"
asyncio = "^3.4"
kafka-python = "^2.0"
clickhouse-driver = "^0.2"
questdb = "^1.0"

[tool.ruff]
line-length = 120
target-version = "py311"
