[package]
name = "flux-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4.41"
crossterm = "0.27"
env_logger = "0.11"                                                            # simple stdout logger
futures = "0.3"
log = "0.4"                                                                    # logging facade
nats = { version = "0.25", optional = true }                                   # future NATS
ratatui = { version = "0.26", features = ["crossterm"] }
rdkafka = { version = "0.36", features = ["tokio"] }                           # Kafka bridge
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"                                                           # async Stream helpers
ctor = "0.2"
once_cell = "1.19"

[features]
default = ["kafka"]
kafka = []
