[package]
name = "flux-operator-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4.41", features = ["serde"] }
clickhouse = "0.11"                                                            # Clickhouse bridge
crossterm = "0.27"
ctor = "0.2"
deadpool-postgres = "0.12"
env_logger = "0.11"                                                            # simple stdout logger
futures = "0.3"
log = "0.4"                                                                    # logging facade
nats = { version = "0.25", optional = true }                                   # future NATS
once_cell = "1.19"
ratatui = { version = "0.26", features = ["crossterm"] }
rdkafka = { version = "0.36", features = ["tokio"] }                           # Kafka bridge
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-stream = "0.1"                                                           # async Stream helpers

[features]
default = ["kafka"]
kafka = []
