[project]
name = "flux-data-pipeline"
version = "0.1.0"
description = "High-performance data pipeline for FLUX platform"
dependencies = [
  "aiokafka>=0.10.0",
  "psycopg[binary,pool]>=3.1.18",
  "pydantic>=2.5.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.19.0",
  "orjson>=3.9.10",
  "uvloop>=0.19.0",
  "tenacity>=8.2.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
data-pipeline = "data_pipeline.main:main"

[tool.setuptools]
packages = ["data_pipeline"]
