[project]
name = "flux-kpi-engine"
version = "0.1.0"
description = "KPI calculation engine for Flux platform"
dependencies = [
  "aiokafka>=0.10.0",
  "clickhouse-driver>=0.2.6",
  "pydantic>=2.0.0",
  "numpy>=1.24.0",
  "click>=8.1.0",
]

[project.scripts]
flux-kpi = "flux_kpi.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flux_kpi"]
